# rust-production-api

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  request.http  spec.yaml  sqlx-data.json  test.sh
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230425053141_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs  utils.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: auth.rs  health_check.rs  home.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
