[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Pandula Weerasooriya <pandula.official@gmail.com>"]
edition = "2021"

[lib]
# We could use any path here, but the community convention is
# specifying a library name using the `name` field. If unspecified,
# cargo will default to `package.name`.
path = "src/lib.rs"

# The double square brackets is an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries.
[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.11"
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
env_logger = "0.9"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
reqwest = "0.11"
